<resources>

    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User name</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="full_name">Full name</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="twitter">twitter</string>
    <string name="my_profile">My profile</string>
    <string name="booking">booking</string>
    <string name="reserve_a_ride">Reserve a ride</string>
    <string name="ride_history">Ride history</string>
    <string name="ride_now">Ride now</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="current_date">current date</string>
    <string name="current_weather">current weather</string>
    <string name="_20c">20c</string>
    <string name="weather_img">weather img</string>
    <string name="ride">Ride now</string>
    <string name="reserve">Booking</string>
    <string name="booking_instruction_1">Choose your exact pickup time,dropping place and the bike up to two days in advancen</string>
    <string name="Booking_instruction_2">Cancel at no charge up to 60 min in advance</string>
    <string name="reserve_ride">Reserve Ride</string>
    <string name="reserve_your_ride">Reserve Your ride</string>
    <string name="booking_page_1_background">Booking_page_1_background</string>
    <string name="assignment_img">assignment_img</string>
    <string name="cancel_img">cancel_img</string>
    <string name="Select">Select item</string>
    <string name="select_pickup_place">Select Pickup place</string>
    <string name="where_would_you_like_to_pick_up_bike">Where would you like to pick up bike?</string>
    <string name="where_would_you_like_to_drop_the_bike">Where would you like to drop the bike?</string>
    <string name="select_a_bike">Select a bike</string>
    <string name="confirm">Confirm</string>
    <string name="select_bike">Select bike</string>
    <string name="select_dropping_place">Select dropping place</string>
    <string name="welcome_admin">Welcome Admin...</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="login_page">Login page</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="create_new_account">Create new account?</string>
    <string name="signup">Signup</string>
    <string name="welcome_to_my_ride">Welcome to MY RIDE !</string>
    <string name="when_do_you_reserve_a_bike">When do you reserve a bike?</string>
    <string name="date_appear_here">Date appear here...</string>
    <string name="set_the_date">set the date</string>
    <string name="when_would_you_like_to_reserve">When would you like to reserve?</string>
    <string name="reserve_is_yours">reserve is yours..</string>
    <string name="pickup_time_appear_here">Pickup time appear here..</string>
    <string name="set_your_date">Set your date</string>
    <string name="set_your_time">Set your time</string>
    <string name="enter_start_location">Enter Start location</string>
    <string name="where_would_you_like_to_get_start">Where would you like to get start?</string>
    <string name="enter_dropping_location">Enter dropping location</string>
    <string name="enter_the_bike_id">Enter the bike id</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="let_s_ride_now">Let\'s Ride Now</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="app_name">My Ride Version2</string>
    <string name="activities">Activities</string>
    <string name="menu_img">menu_img</string>
    <string name="already_have_an_account_back_to_login_page">Already have an account! Back to login page</string>
    <string name="set_your_pickup_time">Set your Pickup Time</string>

    <string name="date">Date:</string>
    <string name="_11_04_2023">11.04.2023</string>
    <string name="pickup_station">PickUp Station:</string>
    <string name="townhall">TownHall</string>
    <string name="dropped_station">Dropped Station:</string>
    <string name="union_place">Union Place</string>
    <string name="bike_id">Bike Id:</string>
    <string name="_0004">0004</string>
    <string name="booked_time">Booked Time:</string>
    <string name="booked_date">Booked Date:</string>
    <string name="loading">Loading....</string>
    <string name="your_bookings_appear_here_to_cancel_booking_is_enable">Your Bookings appear here.To cancel booking is enable.</string>
    <string name="back_arrow">back_arrow</string>
    <string name="cancel">Cancel</string>
    <string name="my_bookings">My Bookings</string>
    <string name="go_to_my_bookings">Go to My Bookings</string>
    <string name="name">Name</string>
    <string name="_1234">1234</string>
    <string name="_5678">5678</string>
    <string name="abcd">abcd</string>
    <string name="efgh">efgh</string>
    <string name="ijkl">ijkl</string>
    <string name="activity_history">Activity History</string>
    <string name="let_s_ride">Let\'s Ride</string>
    <string name="RideNow_intro">Choose your exact pickup station and destiny.You will rederect to the navigation map when you click on \'Start\'.</string>
    <string name="booking_history">Booking History</string>
    <string name="_07_00">07.00</string>


</resources>