<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardId"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booked_date"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/pickupDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_04_2023"
                android:textSize="15sp"
                android:padding="5dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booked_time"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/pickupTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_07_00"
                android:textSize="15sp"
                android:padding="5dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_station"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/pickupPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/townhall"
                android:textSize="15sp"
                android:padding="5dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dropped_station"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/DroppedPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/union_place"
                android:textSize="15sp"
                android:padding="5dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bike_id"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/BikeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0004"
                android:textSize="15sp"
                android:padding="5dp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>