<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booked_date"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/item_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/_1234"
                android:textColor="@color/black"
                android:textSize="15sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booked_time"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/item_view_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5678"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_station"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/item_view_pickupStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abcd"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dropped_station"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/item_view_droppingStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/efgh"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"

                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bike_id"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/item_view_bike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ijkl"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"

                />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
